--- a/.github/workflows/front-test.yml
+++ b/.github/workflows/front-test.yml
@@ -26,12 +26,17 @@ jobs:
 
 
       - name: Start frontend server
+        working-directory: ./Front-e2e
         run: npm run dev &
         env:
           CI: true
 
-      - name: Wait for server to start
-        run: npx wait-on http://localhost:52594
+      - name: Wait for frontend to be ready
+        uses: jakejarvis/wait-action@master
+        with:
+            url: http://localhost:52594
+            timeout: 60
+
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
