--- a/.github/workflows/front-test.yml
+++ b/.github/workflows/front-test.yml
@@ -36,13 +36,12 @@ jobs:
         with:
             url: http://localhost:52594
             timeout: 60
-
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
-          component: false
-          record: false
-          publish-summary: true
+          start: npm run dev
+          wait-on: 'http://localhost:52594'
+          wait-on-timeout: 60
+          working-directory: ./Front-e2e
         env:
-          CYPRESS_baseUrl: http://localhost:52594
-        working-directory: ./Front-e2e
+          CI: true
